<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C27B0"
    tools:context=".operacionesMatematicas">

    <EditText
        android:id="@+id/numero1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="184dp"
        android:background="#FFEB3B"
        android:hint="@string/numero1"
        android:inputType="number"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numero2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="#FFEB3B"
        android:hint="@string/numero2"
        android:inputType="number"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/suma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="52dp"
        android:background="#3F51B5"
        android:text="@string/suma"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/multiplicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultado"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/multiplicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:background="#3F51B5"
        android:text="@string/multiplicacion"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="152dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:gravity="center|center_vertical"
        android:text="@string/resultado"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numero1" />
</androidx.constraintlayout.widget.ConstraintLayout>

